--- a/src/VideoApp/Controls/PlayerToolbarControl.xaml
+++ b/src/VideoApp/Controls/PlayerToolbarControl.xaml
@@ -1,21 +1,23 @@
-<UserControl x:Class="VideoApp.Controls.PlayerToolbarControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:VideoApp.Controls"
-             xmlns:models="using:VideoApp.Core.Models"
-             xmlns:converters="using:VideoApp.Converters"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d">
+<UserControl 
+    x:Class="VideoApp.Controls.PlayerToolbarControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="using:VideoApp.Controls"
+    xmlns:models="using:VideoApp.Core.Models"
+    xmlns:converters="using:VideoApp.Converters"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d">
 
-    <Border MaxWidth="800"
-            Margin="8"
-            VerticalAlignment="Bottom"
-            Background="{ThemeResource LayerOnMicaBaseAltFillColorDefaultBrush}"
-            BorderBrush="{ThemeResource ControlElevationBorderBrush}"
-            BorderThickness="1"
-            CornerRadius="8"
-            Padding="4,8,4,8">
+    <Border 
+        MaxWidth="800"
+        Margin="8"
+        VerticalAlignment="Bottom"
+        Background="{ThemeResource LayerOnMicaBaseAltFillColorDefaultBrush}"
+        BorderBrush="{ThemeResource ControlElevationBorderBrush}"
+        BorderThickness="1"
+        CornerRadius="8"
+        Padding="4,8,4,8">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
@@ -26,31 +28,37 @@
                 <converters:TimeValueConverter x:Key="TimeValueConverter"/>
             </Grid.Resources>
 
-            <Grid Grid.Column="0"
-                  Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing, models:PlaybackState.Paused), Mode=OneWay}">
+            <Grid 
+                Grid.Column="0"
+                Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing, models:PlaybackState.Paused), Mode=OneWay}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="80"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="80"/>
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Column="0"
-                           Margin="5"
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"
-                           Text="{x:Bind converters:Helpers.ToString(ViewModel.Position), Mode=OneWay}"/>
+                <TextBlock 
+                    Grid.Column="0"
+                    Margin="5"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Text="{x:Bind converters:Helpers.ToString(ViewModel.Position), Mode=OneWay}"/>
 
-                <Slider Grid.Column="1" 
-                        Maximum="{x:Bind ViewModel.Duration, Mode=OneWay}"
-                        StepFrequency="1"
-                        Value="{x:Bind ViewModel.Position, Mode=TwoWay}"
-                        ThumbToolTipValueConverter="{StaticResource TimeValueConverter}"/>
+                <local:AppSlider
+                    Grid.Column="1"  
+                    MaxValue="{x:Bind ViewModel.Duration, Mode=OneWay}"
+                    NavigationStepFrequency="10"
+                    StepFrequency="1"
+                    Value="{x:Bind ViewModel.Position, Mode=TwoWay}"
+                    ThumbTipValueConverter="{StaticResource TimeValueConverter}"
+                    PositionCommand="{x:Bind ViewModel.PositionCommand}"/>
 
-                <TextBlock Grid.Column="2"
-                           Margin="5"
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"
-                           Text="{x:Bind converters:Helpers.ToString(ViewModel.Duration), Mode=OneWay}"/>
+                <TextBlock 
+                    Grid.Column="2"
+                    Margin="5"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Text="{x:Bind converters:Helpers.ToString(ViewModel.Duration), Mode=OneWay}"/>
             </Grid>
 
             <Grid Grid.Row="1">
@@ -69,32 +77,37 @@
                 </StackPanel>
 
                 <StackPanel Grid.Column="1" Orientation="Horizontal">
-                    <Button Command="{x:Bind ViewModel.SkipBackCommand}"
-                            Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing, models:PlaybackState.Paused), Mode=OneWay}"
-                            Style="{StaticResource PlaybackButton}">
+                    <Button 
+                        Command="{x:Bind ViewModel.SkipBackCommand}"
+                        Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing, models:PlaybackState.Paused), Mode=OneWay}"
+                        Style="{StaticResource PlaybackButton}">
                         <Button.Content>
                             <FontIcon Margin="0,0,0,0" Glyph="&#xEB9E;" />
                         </Button.Content>
                     </Button>
 
-                    <Button Style="{StaticResource PlayButton}"
-                            Width="48" Height="48"
-                            Command="{x:Bind ViewModel.TogglePlaybackCommand, Mode=OneTime}">
+                    <Button 
+                        Style="{StaticResource PlayButton}"
+                        Width="48" Height="48"
+                        Command="{x:Bind ViewModel.TogglePlaybackCommand, Mode=OneTime}">
                         <Button.Content>
                             <Grid>
-                                <FontIcon Margin="2,2,0,0"
-                                          Visibility="{x:Bind converters:Helpers.VisibleIfNot(ViewModel.State, models:PlaybackState.Playing), Mode=OneWay}"
-                                          Glyph="&#xF5B0;" />
-                                <FontIcon Margin="1,1,0,0"
-                                          Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing), Mode=OneWay}"
-                                          Glyph="&#xF8AE;" />
+                                <FontIcon 
+                                    Margin="2,2,0,0"
+                                    Visibility="{x:Bind converters:Helpers.VisibleIfNot(ViewModel.State, models:PlaybackState.Playing), Mode=OneWay}"
+                                    Glyph="&#xF5B0;" />
+                                <FontIcon 
+                                    Margin="1,1,0,0"
+                                    Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing), Mode=OneWay}"
+                                    Glyph="&#xF8AE;" />
                             </Grid>
                         </Button.Content>
                     </Button>
 
-                    <Button Command="{x:Bind ViewModel.SkipForwardCommand}"
-                            Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing, models:PlaybackState.Paused), Mode=OneWay}"
-                            Style="{StaticResource PlaybackButton}">
+                    <Button
+                        Command="{x:Bind ViewModel.SkipForwardCommand}"                            
+                        Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing, models:PlaybackState.Paused), Mode=OneWay}"
+                        Style="{StaticResource PlaybackButton}">
                         <Button.Content>
                             <FontIcon Margin="0,0,0,0" Glyph="&#xEB9D;" />
                         </Button.Content>
@@ -102,9 +115,10 @@
                 </StackPanel>
 
                 <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
-                    <Button Style="{StaticResource PlaybackButton}"
-                            Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing, models:PlaybackState.Paused), Mode=OneWay}"
-                            IsEnabled="{x:Bind converters:Helpers.IsEnabled(ViewModel.AudioTracks.Length, ViewModel.SubtitleTracks.Length), Mode=OneWay}">
+                    <Button 
+                        Style="{StaticResource PlaybackButton}"
+                        Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Playing, models:PlaybackState.Paused), Mode=OneWay}"
+                        IsEnabled="{x:Bind converters:Helpers.IsEnabled(ViewModel.AudioTracks.Length, ViewModel.SubtitleTracks.Length), Mode=OneWay}">
                         <Button.Content>
                             <FontIcon Margin="0,0,0,0" Glyph="&#xED1E;" />
                         </Button.Content>
@@ -112,20 +126,24 @@
                         <Button.Flyout>
                             <Flyout x:Name="TracksFlyout" Placement="Bottom">
                                 <StackPanel MinWidth="200" MaxWidth="300">
-                                    <TextBlock Style="{ThemeResource CaptionTextBlockStyle}"
-                                               Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.AudioTracks.Length), Mode=OneWay}"
-                                               Text="Audio"/>
-                                    <ListView ItemsSource="{x:Bind ViewModel.AudioTracks, Mode=OneWay}"
-                                              SelectedValue="{x:Bind ViewModel.AudioTrack, Mode=TwoWay}"
-                                              Margin="0,4,0,0"
-                                              DisplayMemberPath="Text"/>
-                                    <TextBlock Style="{ThemeResource CaptionTextBlockStyle}"
-                                               Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.SubtitleTracks.Length), Mode=OneWay}"
-                                               Text="Subtitle"/>
-                                    <ListView ItemsSource="{x:Bind ViewModel.SubtitleTracks, Mode=OneWay}"
-                                              SelectedValue="{x:Bind ViewModel.SubtitleTrack, Mode=TwoWay}"
-                                              Margin="0,4,0,0"
-                                              DisplayMemberPath="Text"/>
+                                    <TextBlock 
+                                        Style="{ThemeResource CaptionTextBlockStyle}"
+                                        Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.AudioTracks.Length), Mode=OneWay}"
+                                        Text="Audio"/>
+                                    <ListView 
+                                        ItemsSource="{x:Bind ViewModel.AudioTracks, Mode=OneWay}"
+                                        SelectedValue="{x:Bind ViewModel.AudioTrack, Mode=TwoWay}"
+                                        Margin="0,4,0,0"
+                                        DisplayMemberPath="Text"/>
+                                    <TextBlock 
+                                        Style="{ThemeResource CaptionTextBlockStyle}"
+                                        Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.SubtitleTracks.Length), Mode=OneWay}"
+                                        Text="Subtitle"/>
+                                    <ListView 
+                                        ItemsSource="{x:Bind ViewModel.SubtitleTracks, Mode=OneWay}"
+                                        SelectedValue="{x:Bind ViewModel.SubtitleTrack, Mode=TwoWay}"
+                                        Margin="0,4,0,0"
+                                        DisplayMemberPath="Text"/>
                                 </StackPanel>
                             </Flyout>
                         </Button.Flyout>
@@ -133,8 +151,9 @@
 
                     <Button Style="{StaticResource PlaybackButton}">
                         <Button.Content>
-                            <FontIcon Margin="0,0,0,0"
-                                      Glyph="{x:Bind converters:Helpers.ToVolumeIcon(ViewModel.Volume), Mode=OneWay}" />
+                            <FontIcon 
+                                Margin="0,0,0,0"
+                                Glyph="{x:Bind converters:Helpers.ToVolumeIcon(ViewModel.Volume), Mode=OneWay}" />
                         </Button.Content>
 
                         <Button.Flyout>
@@ -145,21 +164,24 @@
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
 
-                                    <FontIcon Grid.Column="0"
-                                              Margin="0,0,8,0"
-                                              Glyph="{x:Bind converters:Helpers.ToVolumeIcon(ViewModel.Volume), Mode=OneWay}" />
+                                    <FontIcon 
+                                        Grid.Column="0"
+                                        Margin="0,0,8,0"
+                                        Glyph="{x:Bind converters:Helpers.ToVolumeIcon(ViewModel.Volume), Mode=OneWay}" />
 
-                                    <Slider Grid.Column="1"
-                                            Margin="5,0,5,0"
-                                            Maximum="100"
-                                            Value="{x:Bind ViewModel.Volume, Mode=TwoWay}"/>
+                                    <Slider 
+                                        Grid.Column="1"
+                                        Margin="5,0,5,0"
+                                        Maximum="100"
+                                        Value="{x:Bind ViewModel.Volume, Mode=TwoWay}"/>
                                 </Grid>
                             </Flyout>
                         </Button.Flyout>
                     </Button>
 
-                    <Button Command="{x:Bind ViewModel.ToggleFullScreenCommand}"
-                            Style="{StaticResource PlaybackButton}">
+                    <Button 
+                        Command="{x:Bind ViewModel.ToggleFullScreenCommand}"
+                        Style="{StaticResource PlaybackButton}">
 
                         <Button.Content>
                             <FontIcon Margin="0,0,0,0" Glyph="&#xE740;" />
