--- a/src/VideoApp/Views/PlayerView.xaml
+++ b/src/VideoApp/Views/PlayerView.xaml
@@ -98,7 +98,9 @@
 
         <Grid 
             Visibility="{x:Bind converters:Helpers.VisibleIf(ViewModel.State, models:PlaybackState.Stopped, models:PlaybackState.Closed, models:PlaybackState.Opening), Mode=OneWay}"
-            Background="Black" />
+            Background="Black">
+            <Image Source="ms-appx://VideoApp/Assets/logo.png" Width="64" Height="64"/>
+        </Grid>
 
         <Border 
             x:Name="VolumeOsd"
